# starplot

./: .dockerignore  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.gitignore  create_example.py  example.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.gcp/: docker.yml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker.yml  docs.yml  release.yml  test.yml
data/: readme.md
data/raw/: constellation_borders.json  constellation_hiplines.json  constellations.json  star_designations.csv
data/raw/iau/: and.txt  ant.txt  aps.txt  aql.txt  aqr.txt  ara.txt  ari.txt  aur.txt  boo.txt  cae.txt  cam.txt  cap.txt  car.txt  cas.txt  cen.txt  cep.txt  cet.txt  cha.txt  cir.txt  cma.txt  cmi.txt  cnc.txt  col.txt  com.txt  cra.txt  crb.txt  (+63 more)
data/scripts/: bigsky_mag11.py  bigsky_mag9.py  constellation_borders.py  constellation_hips.py  constellation_names.py  constellations.py  data_settings.py  db.py  docdata.py  dso_names.py  dsos.py  dsos_deprecated.py  milky_way.py  ongc.py  star_designations.py  translations.py
docs/: about.md  banner.vectornator  changelog.md  coming-soon.md  data-sources.md  demo.md  examples.md  gallery.md  index.md  installation.md  license.md  logo.vectornator  publications.md  reference-callables.md  reference-collisions.md  reference-data.md  reference-galaxyplot.md  reference-horizonplot.md  reference-localization.md  reference-mapplot.md  reference-models.md  reference-ongc.md  reference-opticplot.md  reference-plotstyle.md  reference-positions.md  reference-projection.md  reference-selecting-objects.md  reference-settings.md  reference-skyobject.md  reference-styling.md  reference-zenithplot.md  roadmap.md  showcase.md  tutorial.md
docs/css/: extra.css
docs/custom/: main.html
docs/data/: building.md  constellations.md  custom-catalogs.md  dsos.md  overview.md  star-catalogs.md  stars.md
docs/examples/: horizon-double-cluster.md  horizon-gradient.md  horizon-sgr.md  map-big-dipper.md  map-big.md  map-canis-major.md  map-carina-nebula.md  map-cassiopeia.md  map-comet-neowise.md  map-custom-marker.md  map-galaxy.md  map-hale-bopp-comet.md  map-lyra.md  map-milky-way-stars.md  map-orion.md  map-orthographic.md  map-sagittarius.md  map-virgo-cluster.md  optic-iss-transit.md  optic-m45.md  optic-moon-saturn.md  optic-orion.md  optic-solar-eclipse.md  star-chart-basic.md  star-chart-detail.md  star-chart-french.md
docs/images/: logo.vectornator  logo2.vectornator
docs/migration-guides/: 0.16.0.md
docs/object-names/: constellations.md  dsos.md  stars.md
docs/snippets/: _newsletter.html
docs/stylesheets/: extra.css
docs/tutorial/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md
examples/: blue.yml  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_07.py  example_08.py  example_09.py  example_1.py  example_10.py  example_2.py  example_3.py  examples.py  galaxy_custom_marker.py  horizon_double_cluster.py  horizon_gradient.py  horizon_sgr.py  map_big.py  map_big_dipper.py  map_blue_light.yml  map_canis_major.py  map_carina.py  map_cas.py  map_comet_neowise.py  map_galaxy.py  map_hale_bopp.py  map_lyra.py  map_milky_way_stars.py  map_orion.py  map_orthographic.py  map_sagittarius.py  map_virgo_cluster.py  optic_iss_transit.py  optic_m45.py  optic_moon_saturn.py  optic_orion_nebula.py  optic_solar_eclipse.py  overplot_galaxies_coordenates_arround_region.py  (+3 more)
hash_checks/: hashio.py  hashlock.yml  horizon_checks.py  map_checks.py  optic_checks.py  template.html  zenith_checks.py
scripts/: bigsky_stars.py  constellation_hips.py  create_db.py  download_cons.py  ecliptic.py  finder.py  gallery.py  geopack.py  gpack_constellations.py  gpk_stars.py  hip.py  hip_parquet.py  ipy.py  marimo.py  moonphases.py  ongc_docdata.py  ongc_geopack.py  polaris.py  pq_stars.py  prep_db.py  prep_mw.py  scratchpad.py  setup.sh  star_designations.py  starnames.py  svg.py  tycho1_geopack.py  voronoi.py
scripts/deprecated/: create_db.py  gpack_constellations.py  hip_parquet.py  ongc_geopack.py
src/starplot/: __init__.py  base.py  callables.py  charts.py  cli.py  config.py  constants.py  constellations.py  coordinates.py  data.py  dsos.py  geod.py  geometry.py  horizon.py  labels.py  map.py  mixins.py  models.py  observer.py  optic.py  optic2.py  optics.py  planets.py  plot.py  profile.py  projections.py  scope.py  settings.py  settings2.py  stars.py  styles.py  utils.py  warnings.py  zenith.py
tests/: test_catalogs.py  test_charts.py  test_comets.py  test_constellations.py  test_data.py  test_dsos.py  test_geometry.py  test_languages.py  test_map.py  test_models.py  test_observer.py  test_optic.py  test_satellite.py  test_settings.py  test_stars.py  test_styles.py  test_utils.py  test_zenith.py  utils.py
tests/data/: comets.txt
tutorial/: build.py  tutorial_02.py  tutorial_03.py  tutorial_04.py  tutorial_05.py  tutorial_06.py  tutorial_07.py  tutorial_08.py
(+140 files in other folders)
